Fix program teaser on IE11

--- a/source/frontend/src/block/ProgramModule/ProgramTeaser/ProgramTeaser.scss
+++ b/source/frontend/src/block/ProgramModule/ProgramTeaser/ProgramTeaser.scss
@@ -13,6 +13,7 @@
 	.image {
 		@include size(100%, auto);
 		@include aspect-ratio(16px, 9px);
+		flex-shrink: 0;
 	}
 
 	.gradient-overlay {
